# AnotherBoidsDemo

./: .gitignore  Assembly-CSharp.csproj  cpp_glue.sln
Assets/Scripts/: LibraryHandler.cs
NativeBoids/: .editorconfig  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  NativeBoids.cpp  NativeBoids.h  vcpkg.json
NativeBoids/headers/: entity.h  fixed_buffer.h  native_boids.h  simple_logger.h
NativeBoids/src/: fixed_buffer.cpp  native_boids.cpp  simple_logger.cpp
NativeBoids/tests/: main.cpp
ProjectSettings/: ProjectSettings.asset
